--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "jest",
-    "start-w": "webpack-dev-server",
+    "start-w": "webpack-dev-server --content-base bundle",
     "lint": "eslint .",
     "build-dev": "webpack --config webpack.config.js --progress --profile --colors"
   },
@@ -29,9 +29,12 @@
     "passport-local-mongoose": "4.0.0",
     "react": "16.1.1",
     "react-dom": "16.1.1",
+    "react-router-dom": "4.1.1",
     "sass-loader": "6.0.6",
     "serve-favicon": "~2.4.5",
-    "webpack": "3.4.1"
+    "webpack": "3.4.1",
+    "webpack-dev-middleware": "1.11.0",
+    "webpack-hot-middleware": "2.18.0"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
